--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,7 +18,7 @@ p {
 }
 
 body {
-    background-color: rgb(211, 212, 218);
+    background-color: #201b2c;
 }
 
 
@@ -35,7 +35,8 @@ h1 {
     margin-top: 100px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 80px;
-    color: black;
+    color: #3ac9a5;
+    text-shadow: 0.2em 0.2em 0.2em black;
 }
 
 img {
@@ -57,7 +58,7 @@ img {
 
 .header>a img {
     float: left;
-    width: 100px;
+    width: 80px;
     height: 80px;
     cursor: pointer;
     cursor: hand;
@@ -140,6 +141,32 @@ img {
     -ms-transform: scale(1.2);
     transform: scale(1.2);}
 
+.flexbox-redirect {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 200px;
+    margin: auto;
+    box-shadow: 5px 5px 60px #494242;
+    border-radius: 25px;
+    background-color: #201b2c;
+}
+
+.flexbox-redirect>div {
+    flex: 200px;
+    margin: 10px 10px;
+    border: 2px;
+    border-color: #3ac9a5;
+    border-style: solid;
+    border-radius: 15px;
+    box-shadow: 30px 20px 40px #0c0c13;
+}
+
+.flexbox-redirect div:hover {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
 .flexbox {
     display: flex;
     flex-wrap: wrap;
@@ -147,15 +174,14 @@ img {
     margin: auto;
     box-shadow: 5px 5px 60px #494242;
     border-radius: 25px;
-    background-color: rgba(245, 245, 245, 0.753);
+    background-color: #201b2c;
 }
 
 .flexbox>div {
-    
-    flex:200px;
+    flex: 200px;
     margin: 10px 10px;
-    border: 5px;
-    border-color: rgb(167, 160, 160);
+    border: 2px;
+    border-color: #3ac9a5;
     border-style: solid;
     border-radius: 15px;
     box-shadow: 30px 20px 40px #0c0c13;
@@ -301,6 +327,22 @@ img {
     color: #f0fffc94;
 }
 
+.btn-admin{
+    width: 100%;
+    padding: 15px 5px;
+    margin: 5px;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 3px;
+    color: #2b134b;
+    background: #00ff88;
+    cursor: pointer;
+    box-shadow: 0px 10px 40px -12px #00ff8052;
+}
+
 .btn-login {
     width: 100%;
     padding: 15px 5px;
@@ -424,6 +466,20 @@ td {
     display: flex;
 }
 
+#navbarSupportedContent {
+    display: flex;
+}
+
+
+
+.navbar-nav-mr-auto>a img {
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    cursor: hand;
+    background-repeat: no-repeat;
+}
+
 .navbar-nav-ml-auto li 
 {
     margin-left: 10px;
@@ -431,8 +487,7 @@ td {
 
 .navbar-nav-ml-auto li a
 {   
-    display: flex;
-    flex-wrap: wrap;
+    float: right;
     padding: 10px;
     background-color: #201b2c;
     border-radius: 10px;
