--- a/public/css/app.css
+++ b/public/css/app.css
@@ -153,6 +153,13 @@ footer p {
 }
 
 
+.menu-login{
+    display: flex;
+}
+
+
+
+
 .search {
     margin: 25px 0px 0px 0px;
     display: flex;
@@ -258,7 +265,7 @@ footer p {
 
 
 
-table, td {
+table, th,td {
     margin: auto;
     border: 1px solid;
     border-color: white;
@@ -269,6 +276,10 @@ table, td {
     padding: 5px;
     border:none;
     border-radius: 10px;
+}
+
+.form{
+    text-align: center;
 }
 
 .right-login{
@@ -319,5 +330,163 @@ table, td {
     font-size: 12pt;
     box-shadow: 0px 10px 40px #00000056;
     outline: none;
+    box-sizing: border-box;
+}
+
+
+/*login*/
+
+
+.container-1>a img {
+    width: 100px;
+    height: 80px;
+    cursor: pointer;
+    cursor: hand;
+    background-repeat: no-repeat;
+}
+
+.navbar-nav-ml-auto {
+    display: flex;
+}
+
+#navbarSupportedContent {
+    display: flex;
+}
+
+
+
+.navbar-nav-mr-auto>a img {
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    cursor: hand;
+    background-repeat: no-repeat;
+}
+
+.navbar-nav-ml-auto li a {
+    float: right;
+    background-color: #201b2c;
+    border-radius: 10px;
+    box-shadow: 0.2em 0.2em 0.2em black;
+    color: white;
+    margin: 2px;
+}
+
+
+.navbar-nav-ml-auto li a:hover {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
+.row-justify-content-center {
+    display: flex;
+    justify-content: center;
+    margin: 1.8% 40% 0% 40%;
+    background-color: #3ac9a5;
+    border-radius: 15px;
+    box-shadow: 0.2em 0.2em 0.2em;
+}
+
+.card {
+    display: grid;
+    margin: 25px;
+}
+
+.card-header {
+    color: whitesmoke;
+    background-color: #201b2c;
+    border-radius: 10px;
+    margin-left: 90px;
+    margin-right: 90px;
+    padding: 5px;
+    box-shadow: 0.2em 0.2em 0.2em black;
+    text-align: center;
+}
+
+.card-body {
+    margin: 25px;
+}
+
+.card-body a{
+    display: inline-flex;
+    text-shadow: none;
+}
+
+.form-group-row {
+    color: black;
+    font-size: 25px;
+    text-align: center;
+}
+
+#email {
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#name {
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#password {
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#password-confirm {
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+.form-check-label {
+    font-size: medium;
+}
+
+.btn-btn-primary {
+    background: #0066A2;
+    color: white;
+    border-radius: 35px;
+    border-style: hidden;
+    border-color: #0066A2;
+    height: 40px;
+    width: 85px;
+    font: bold 15px arial, sans-serif;
+    text-shadow: none;
+    cursor: pointer;
+}
+
+.btn-btn-primary:hover {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
+.btn-btn-link {
+    font-size: 15px;
+    color: black;
+}
+
+.btn-btn-reset {
+    background: #0066A2;
+    color: white;
+    border-radius: 35px;
+    border-style: hidden;
+    border-color: #0066A2;
+    height: 30px;
+    width: 180px;
+    font: bold 15px arial, sans-serif;
+    margin: 5px;
+    text-shadow: none;
+    cursor: pointer;
+}
+.form_cashback{
+    text-align: center;
+    border: none;
+    border-radius: 10px;
+    padding: 8px;
+    background-color: #f0ffffde;
+    font-size: 15pt;
+    box-shadow: 0px 10px 40px #00000056;
     box-sizing: border-box;
 }
