--- a/public/css/app.css
+++ b/public/css/app.css
@@ -278,8 +278,6 @@
         text-align: center;
     }
 
-
-
     table,
     th,
     td {
@@ -425,7 +423,7 @@
     .row-justify-content-center {
         display: flex;
         justify-content: center;
-        margin: 1.8% 40% 0% 40%;
+        margin: 1.8% 10%;
         background-color: #3ac9a5;
         border-radius: 15px;
         box-shadow: 0.2em 0.2em 0.2em;
