--- a/public/css/app.css
+++ b/public/css/app.css
@@ -425,7 +425,7 @@
     .row-justify-content-center {
         display: flex;
         justify-content: center;
-        margin: 1.8% 40% 0% 40%;
+        margin: 1.8% 13%;
         background-color: #3ac9a5;
         border-radius: 15px;
         box-shadow: 0.2em 0.2em 0.2em;
