--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,6 +9,10 @@
 
 @media (min-width: 768px) {
 
+    .store-mobile{
+        display: none;
+    }
+
     .title{
         background-color: whitesmoke;
         margin: 25px 21rem 35px;
